build(iperf3): update Dockerfile to use Alpine edge and set default version
- Change base image from Alpine 3.20 to Alpine edge
- Set default iperf3 version to 3.18-r0

--- a/iperf3/Dockerfile
+++ b/iperf3/Dockerfile
@@ -1,9 +1,9 @@
-FROM alpine:3.20
+FROM alpine:edge
 
 LABEL maintainer="Jerry"
 
 # Define the version argument
-ARG VERSION
+ARG VERSION=3.18-r0
 
 # Install the specified version of iperf3
 RUN apk add --no-cache iperf3=${VERSION}
