build(iperf3): update to version 3.19.1 and switch to Alpine edge
- Update iperf3 version from 3.19 to 3.19.1
- Change base image from Alpine 3.22 to Alpine edge

--- a/iperf3/Dockerfile
+++ b/iperf3/Dockerfile
@@ -1,9 +1,9 @@
-FROM alpine:3.22
+FROM alpine:edge
 
 LABEL maintainer="Jerry"
 
 # Define the version argument
-ARG VERSION=3.19
+ARG VERSION=3.19.1
 
 # Install the specified version of iperf3
 RUN apk add --no-cache iperf3=${VERSION}-r0
