build(xray): rebuild image with new configuration and Dockerfile
- Update Dockerfile to use golang:latest as build base
- Remove support for 386 and arm/v6 architectures
- Add multi-stage build for smaller image size
- Update README.md with new image features and usage instructions
- Remove build_xray.sh and xray.sh scripts
- Delete config.json example file

--- a/config.yaml
+++ b/config.yaml
@@ -1,15 +1,15 @@
 # Project configuration list
 projects:
   - project_name: Xray
-    repo_latest: teddysun/xray
+    repo_latest: XTLS/Xray-core
     repo_current: jerryin/xray
     version_source:
-      latest: docker_hub
+      latest: github_api
       current: docker_hub
     version_type: semver
     file_path: xray
     repository: xray
-    platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/386,linux/arm/v7,linux/arm/v6
+    platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/arm/v7
 
   - project_name: ZeroTier
     repo_latest: zerotier/ZeroTierOne
